# crypto_web

./: .gitignore  Cargo.toml  README.md  app.js  app.py  documentation.md  freezer.py  index.html  requirements.txt  template_aks.html  template_fermat.html  template_miller-rabin.html  template_test.html
.github/workflows/: deploy.yml
pkg/: crypto_web.js  crypto_web_bg.wasm
src/: aks.rs  fermat.rs  lib.rs  lib2.rs  miller-rabin.rs  miller_rabin.rs
static/: aks.js  fermat.js  miller_rabin.js  page.css
templates/: aks.html  base.html  fermat.html  miller-rabin.html  test.html
test_web/: Cargo.toml
test_web/src/: aks.rs  main.rs
